Fix list text wrapping

--- a/src/app/layout/main-content/tabs/about/about.component.scss
+++ b/src/app/layout/main-content/tabs/about/about.component.scss
@@ -14,7 +14,8 @@ p {
 
 .mdc-list-item {
   p {
-    font: var(--mat-sys-body-medium);
+    font: var(--mat-sys-body-small);
+    text-wrap: wrap;
     margin: 0;
   }
 }
